--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,8 @@
 
 <nav class="bg-sky-200 p-4 text-3xl flex items-center justify-between gap-10 font-bold " >
+   <p>
     <a class="ps-10 hover:text-red-400" href="/">Home</a>
+    <a class="ps-10 hover:text-red-400" href="/about">About</a>
+   </p> 
     <a class="pe-10 hover:text-red-500" href="/login">Login</a>
 </nav>
