adding authenticate part and profile in code

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,6 @@
     <a class="ps-10 hover:text-blue-600" href="/">Home</a>
     <a class="ps-10 hover:text-blue-600" href="/about">About</a>
     <a class="pe-10 hover:text-red-600" href="/login">Login</a>
-
+    <a class="pe-10 hover:text-red-600" href="/logout-user">Logout</a>
     
 </nav>
