--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,14 @@
 <%-include("partials/nav")%>
 
 <!-- here the content present in body or page -->
-<h1 class="w-[80%] text-center font-bold text-6xl bg-red-300 text-red-600 py-4 m-auto my-3 rounded-2xl border-4 ">This Is Login Page</h1>
 
+ <div class="w-[100%] h-[90vh] bg-[url('https://images.unsplash.com/photo-1432821596592-e2c18b78144f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bG9naW4lMjBwYWdlfGVufDB8fDB8fHww')] bg-no-repeat bg-cover pt-10 text-center rounded-2xl border-4">
 
- <div class="w-[50%] h-[70vh] bg-red-300 m-auto  flex flex-col items-center justify-center rounded-2xl border-4">
-   
-  <form class=" w-[40%] text-center font-bold text-xl " action="">
+  <div class="log w-[30%] flex flex-col items-center justify-center m-auto rounded-2xl p-7 bg-black">
+       
+  <h1 class="w-[80%] text-center font-bold text-2xl py-4 m-auto my-3 rounded-2xl">This Is Login Page</h1>
+  
+  <form class=" w-[70%] text-center font-bold text-xl " action="/login-user" method="post">
     <input class="w-[100%] py-2 border-2 px-10 rounded-2xl " type="text" name="username" placeholder="Username"><br><br>
     <input class="w-[100%] py-1 border-2 px-10 rounded-2xl" type="password" name="password" placeholder="Password" id=""><br><br>
     <a href="" class="text-red-700">Forgot Password?</a>
@@ -21,6 +23,7 @@
     <a class="bg-blue-400 px-8 py-1 rounded-2xl border-2 hover:text-white hover:bg-cyan-300" href="/register">Register</a>
     <a class="bg-blue-400 px-8 py-1 rounded-2xl border-2 hover:text-white hover:bg-cyan-300" href="/login">Login</a>
    </p>
+  </div>
   
  </div>
 
