--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,22 +5,26 @@
 <%-include("partials/nav")%>
 
 <!-- here the content present in body or page -->
-     <h1 class="w-[80%] bg-red-300 m-auto text-center font-bold text-6xl rounded-2xl text-red-600 py-3 my-4 ">Register Here</h1>
+  <div class="pageregister w-[100%] h-[90vh] bg-black p-1">
+        
+    <div class="w-[30%] h-[70vh]  bg-gradient-to-r from-indigo-400  opacity-300 m-auto mt-10 rounded-2xl border-4">
+      <h1 class="w-[80%]  m-auto text-center font-bold text-3xl text-green-400 rounded-2xl  py-3 my-1 ">Register Here</h1>
 
- <div class="w-[50%] h-[70vh] bg-red-300 m-auto  flex flex-col items-center justify-center rounded-2xl border-4">
-   
-  <form class="   text-center font-bold text-xl " action="/register-user" method="post">
+      <form class=" w-[70%] m-auto text-center font-bold text-xl " action="/register-user" method="post">
+    
+        <input class="w-[100%]  py-2 border-2 px-10  rounded-2xl " type="text" name="name" placeholder="Full name"><br><br>
+        <input class="w-[100%] py-2 border-2 px-10  rounded-2xl type="text" name="username" id="" placeholder="username"><br><br>
+        <input class="w-[100%] py-2 border-2 px-10  rounded-2xl type="email" name="email" placeholder="Emailid" id=""><br><br>
+        <input class="w-[100%] py-2 border-2 px-10 rounded-2xl" type="password"  name="password" placeholder="Password" id=""><br><br>
+        <a href="" class="text-red-700">Forgot Password?</a><br><br>
+        <button class="bg-blue-400 px-8 py-2 rounded-2xl border-2 hover:text-white hover:bg-cyan-300">Register user</button>
+    
+      </form>
+      
+     </div>
+    
+  </div>
 
-    <input class="w-[100%] py-2 border-2 px-10  rounded-2xl " type="text" name="name" placeholder="Full name"><br><br>
-    <input class="w-[100%] py-2 border-2 px-10  rounded-2xl type="text" name="username" id="" placeholder="username"><br><br>
-    <input class="w-[100%] py-2 border-2 px-10  rounded-2xl type="email" name="email" placeholder="Emailid" id=""><br><br>
-    <input class="w-[100%] py-2 border-2 px-10 rounded-2xl" type="password"  name="password" placeholder="Password" id=""><br><br>
-    <a href="" class="text-red-700">Forgot Password?</a><br><br>
-    <button class="bg-blue-400 px-8 py-3 rounded-2xl border-2 hover:text-white hover:bg-cyan-300">Register user</button>
-
-  </form>
-  
- </div>
 
 
 <!-- footer of body- -->
